# Kombo

./: .gitignore  AGENTS.md  CONTEXT.md  README.en.md  README.md  doc.md  index.html  package-lock.json  package.json  vite.config.ts
.zcode/plans/: plan-sess_d27b8957-2f26-41d8-995c-4ab4c0da3808.md
docs/: kills-sounds.md
docs/adr/: 0001-domain-pure-logic.md  0002-fifo-orb-queue.md
docs/agents/: issue-tracker.md
src/: App.test.tsx  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ComboEditor.test.tsx  ComboEditor.tsx  ComboManager.tsx  CooldownOverlay.test.tsx  CooldownOverlay.tsx  Dashboard.test.tsx  Dashboard.tsx  ElementIcon.tsx  Help.test.tsx  Help.tsx  HeroIcon.tsx  OptimalPathDisplay.tsx  OrbDisplay.test.tsx  OrbDisplay.tsx  PlayZone.test.tsx  PlayZone.tsx  ProgressBar.tsx  RecipePanel.tsx  RhythmScatter.tsx  SettingsPanel.tsx  SlotDisplay.tsx  SpellHistory.test.tsx  SpellHistory.tsx  SpellIcon.test.tsx  SpellIcon.tsx
src/domain/: castEngine.test.ts  castEngine.ts  combo.test.ts  combo.ts  comboStore.test.ts  comboStore.ts  evaluator.test.ts  evaluator.ts  i18n.test.ts  i18n.ts  icons.test.ts  icons.ts  invokerEngine.test.ts  invokerEngine.ts  keymap.ts  killTier.ts  orbDisplay.ts  orbEngine.test.ts  orbEngine.ts  presets.ts  resolveComboName.test.ts  resolveComboName.ts  rhythmChart.test.ts  rhythmChart.ts  sessionEngine.test.ts  sessionEngine.ts  sessionStore.ts  settings.test.ts  settings.ts  slotEngine.test.ts  slotEngine.ts  (+12 more)
(+19 files in other folders)
