[package]
name = "kombo"
version = "0.1.0"
edition = "2021"
description = "卡尔连招模拟器 (Invoker Combo Simulator)"

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
