[package]
name = "kombo"
version = "0.1.4"
edition = "2021"
description = "卡尔连招模拟器 (Invoker Combo Simulator)"

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
